script.js added, handle 'return flse' and function calling

--- a/sign_up.html
+++ b/sign_up.html
@@ -26,7 +26,7 @@
                 <h1>Sign Up</h1>
             </div>
             <div class="sgnp-form">
-                <form id="signupForm" novalidate onsubmit="return false">
+                <form id="signupForm" novalidate onsubmit="registerUser(); return false" >
 
                     <div class="name-wrapper">
                         <input type="text" placeholder="Name" id="signupName">
@@ -62,7 +62,7 @@
                                     
                         </div>
                         <span id="errorPrivPol"></span> <!--onclick="showSignUpMsg(); return false" -->
-                        <button type="submit"  class="signup" id="submitBtn" disabled onclick="registerUser()" >Sign up</button>
+                        <button type="submit"  class="signup" id="submitBtn" disabled >Sign up</button>
                         <div class="signup-msg  d-none" id="signUpMsg">You have successesfully signed up</div>
                     </div>
                 </form>
