--- a/add_task.html
+++ b/add_task.html
@@ -24,7 +24,6 @@
     <script src="./scripts/ContactsScript.js/contacts.js"></script>
     <script src="./scripts/AddTaskScripts/addTaskContactsList.js" defer></script>
     <script src="./scripts/AddTaskScripts/add_task.js"></script>
-    <script src="./scripts/AddTaskScripts/create_task.js"></script>
 </head>
 
 
@@ -257,7 +256,7 @@
                             <div class="display-flex clear-create"><button onclick="resetAddTaskInputs()"
                                     class="clear-btn">Clear
                                     <img src="./assets/svg/addTasksSvg/clear.svg" alt=""></button><button
-                                    onclick="createTask()" class="createTask-button">Create Task<img
+                                    onclick="showTaskNotification()" class="createTask-button">Create Task<img
                                         src="./assets/svg/addTasksSvg/cross.svg" alt="">
                                 </button></div>
 
