validate create button fixes ?!?!

--- a/add_task.html
+++ b/add_task.html
@@ -185,12 +185,13 @@
                                 </div>
 
                                 <div class="addTask-section addTask-category">
-                                    <label for="">
+                                    <label style="display: flex;" for="">
                                         <p>Category</p>
+                                        <p style="color: red;">*</p>
                                     </label>
                                     <div class="category-input" onclick="toggleCategoryDropdown()">
                                         <input id="category-field" class="placeholder-color"
-                                            placeholder="Select task category" type="text" readonly>
+                                            value="Select task category" type="text" readonly>
                                         <div class="input-icon-category-container">
                                             <img id="input-icon-category"
                                                 src="./assets/svg/addTasksSvg/arrow_drop_down.svg" alt="Icon"
