fetch tasks render tasks started styling task cards

--- a/add_task.html
+++ b/add_task.html
@@ -29,8 +29,8 @@
 
 
 
-<body onload="addTaskInit(); getAssignedContacts(); renderAssignedContacts();">
-    <div class="content-width">
+<body onload="init(); ">
+    <div onclick="closeCategoryDropdown(event)" class="content-width">
 
         <div class="content_left">
             <div>
