--- a/contacts.html
+++ b/contacts.html
@@ -17,12 +17,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inconsolata:wght@200..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Moul&family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Press+Start+2P&family=Sniglet:wght@400;800&family=Varela+Round&display=swap"
         rel="stylesheet">
+        <script src="./scripts/script.js"></script>
     <script src="./scripts/ContactsScript.js/contacts.js"></script>
     <script src="./scripts/ContactsScript.js/contacts_template.js"></script>
-    <script src="./scripts/script.js"></script>
 </head>
 
-<body onload="getContacts()">
+<body onload="init()">
 
     <div class="content-width">
 
