--- a/board.html
+++ b/board.html
@@ -252,9 +252,10 @@
                                     class="add-task-input-field" type="text" placeholder="Add new subtask"
                                     maxlength="30"><img class="subtask-add" src="./assets/img/addTask/add.svg" alt=""
                                     onclick="focusSubtaskInput()">
-                                <div class="cancel-check-btn"><img class="subtask-cancel" a onclick="cancelSubInput()"
-                                        src="./assets/img/addTask/cross.svg" alt=""><img class="subtask-check"
-                                        src="./assets/img/addTask/check.svg" alt="" onclick="renderSubtaskList()"></div>
+                                <div style="right:-84%" class="cancel-check-btn"><img class="subtask-cancel" a
+                                        onclick="cancelSubInput()" src="./assets/img/addTask/cross.svg" alt=""><img
+                                        class="subtask-check" src="./assets/img/addTask/check.svg" alt=""
+                                        onclick="renderSubtaskList()"></div>
 
                             </div>
 
