--- a/board.html
+++ b/board.html
@@ -27,7 +27,7 @@
     <script src="./scripts/AddTaskScripts/create_task.js"></script>
 </head>
 
-<body onload="updateHTML(); addTaskInit()">
+<body onload="updateHTML(); init()">
 
     <div class="content-width">
 
