rename init function

--- a/summary.html
+++ b/summary.html
@@ -14,7 +14,7 @@
     <script src="./scripts/summary.js" defer></script>
 </head>
 
-<body onload="init()">
+<body onload="summaryInit()">
     <div class="content-width">
         <div class="content_left">
             <div>
