--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./styles/login.css">
-    <script src="./scripts/script.js"></script>
+    <script defer src="./scripts/script.js"></script>
     <script defer src="./scripts/login.js"></script>
     <title>page 1 with animation and login</title>
 </head>
 
-<body onload="init()">
+<body onload="loginInit()">
 
     <div class="login-content-box" id="loginContentBox">
         <div class="nau-sign-up-box">
@@ -38,9 +38,8 @@
                     <span id="error"></span>
                     
                     <div class="login-button-box">
-                        <button class="login" type="submit" onclick="loginUser()">Login</button>
-                        <button class="guest-login">Guest
-                            Login</button>
+                        <button class="login" type="submit" id="login"  disabled  onclick="loginUser()">Login</button>
+                        <button class="guest-login" >Guest Login</button>
                     </div>
                 </form>
             </div>
