--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                     </div>
                     <span id="error"></span>
                     
+                    <div class="remember-me" id="rememberMe">
+                        <input type="checkbox" id="checkbox">
+                        <label for="checkbox" class="checkbox-label">Remember me</label>
+                    </div>
+
                     <div class="login-button-box">
                         <button class="login" type="submit" id="login"  disabled  onclick="loginUser()">Login</button>
                         <button class="guest-login" >Guest Login</button>
