--- a/add_task.html
+++ b/add_task.html
@@ -29,7 +29,7 @@
 
 
 
-<body onload="init(); addTaskInit() ">
+<body onload= "createTaskInit()">
     <div onclick="closeCategoryDropdown(event)" class="content-width">
 
         <div class="content_left">
