hide subtask progressbar if no subtasks assigned

--- a/add_task.html
+++ b/add_task.html
@@ -24,7 +24,7 @@
     <script src="./scripts/ContactsScript.js/contacts.js"></script>
     <script src="./scripts/AddTaskScripts/addTaskContactsList.js" defer></script>
     <script src="./scripts/AddTaskScripts/add_task.js"></script>
-    <script src="./scripts/AddTaskScripts/create_task.js"></script>
+    <script src="./scripts/AddTaskScripts/create_task.js" defer></script>
 </head>
 
 
