--- a/board.html
+++ b/board.html
@@ -9,6 +9,8 @@
     <script src="./scripts/script.js"></script>
     <script src="./scripts/AddTaskScripts/add_task.js"></script>
     <script src="./scripts/AddTaskScripts/addTaskContactsList.js"></script>
+    <script src="./scripts/task_card_overlay_script.js"></script>
+    <script src="./scripts/AddTaskScripts/create_task.js" defer></script>
     <link rel="icon" type="image/x-icon" href="./assets/icons/Favicon.png">
     <title>Join</title>
     <link rel="stylesheet" href="./styles/navBar.css">
@@ -19,12 +21,9 @@
     <link rel="stylesheet" href="./styles/AddTaskSection/addTaskContactsList.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inconsolata:wght@200..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Moul&family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Press+Start+2P&family=Sniglet:wght@400;800&family=Varela+Round&display=swap"
-        rel="stylesheet">
+    <linkhref="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inconsolata:wght@200..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Moul&family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Press+Start+2P&family=Sniglet:wght@400;800&family=Varela+Round&display=swap"rel="stylesheet">
     <link rel="stylesheet" href="./styles/style_task_card_overlay.css">
-    <script src="./scripts/task_card_overlay_script.js"></script>
-    <script src="./scripts/AddTaskScripts/create_task.js"></script>
+    
 </head>
 
 <body onload="boardInit()">
