changed add task functions on board

--- a/board.html
+++ b/board.html
@@ -297,7 +297,7 @@
             <div><span style="color:red">*</span><span>This field is required</span></div>
             <div onclick="closeAddTaskOverlay(event)" class="display-flex clear-create"><button
                     onclick="clearInputFields()" class="clear-btn">Cancel
-                    <img src="./assets/svg/addTasksSvg/clear.svg" alt=""></button><button onclick="createTask()"
+                    <img src="./assets/svg/addTasksSvg/clear.svg" alt=""></button><button onclick="createTaskOverlay()"
                     class="createTask-button">Create Task<img src="./assets/svg/addTasksSvg/cross.svg" alt="">
                 </button></div>
 
