fixed render subtasks

--- a/add_task.html
+++ b/add_task.html
@@ -29,7 +29,7 @@
 
 
 
-<body onload= "createTaskInit()">
+<body onload="addTaskInit()">
     <div onclick="closeCategoryDropdown(event)" class="content-width">
 
         <div class="content_left">
