adding remember me checkbox, calling function 'rememberMe' for testing

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     </div>
                     <span id="error"></span>
                     
-                    <div class="remember-me" id="rememberMe">
-                        <input type="checkbox" id="checkbox">
+                    <div class="remember-me">
+                        <input type="checkbox" id="rememberMe" onclick="rememberMe()">
                         <label for="checkbox" class="checkbox-label">Remember me</label>
                     </div>
 
