removed calling 'rememberMe' function onclick

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <span id="error"></span>
                     
                     <div class="remember-me">
-                        <input type="checkbox" id="rememberMe" onclick="rememberMe()">
+                        <input type="checkbox" id="rememberMe" >
                         <label for="checkbox" class="checkbox-label">Remember me</label>
                     </div>
 
