greeting for user and guest

--- a/summary.html
+++ b/summary.html
@@ -149,8 +149,10 @@
                         </div>
                     </div>
                     <div class="greeting">
-                        <h3 class="font-size-47px color-2A3647">Good morning,</h3>
-                        <h2 class="user-name" id="userName">Sofia Müller</h2>
+                        <h3 id="greeting" class="font-size-47px color-2A3647 font-weight-500">Good morning, 
+                            <h2 class="user-name" id="userName"></h2>
+                        </h3>
+                       
                     </div>
                 </div>
 
