edited classes for rm-wrapper

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     </div>
                     <span id="error"></span>
                     
-                    <div class="remember-me">
-                        <input type="checkbox" id="rememberMe" >
-                        <label for="checkbox" class="checkbox-label">Remember me</label>
+                    <div class="remember-me-wrapper">
+                        <input type="checkbox" class="rm-chb"  id="rememberMe" >
+                        <label for="rememberMe" class="checkbox-label">Remember me</label>
                     </div>
 
                     <div class="login-button-box">
