finished summary render functions

--- a/contacts.html
+++ b/contacts.html
@@ -17,7 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inconsolata:wght@200..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Moul&family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Press+Start+2P&family=Sniglet:wght@400;800&family=Varela+Round&display=swap"
         rel="stylesheet">
-        <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
     <script src="./scripts/ContactsScript.js/contacts.js"></script>
     <script src="./scripts/ContactsScript.js/contacts_template.js"></script>
 </head>
@@ -36,14 +36,14 @@
                     <a href="./summary.html"><button class="nav_btn nav_summary "><span><img
                                     src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
-                    <a class="active" href="./add_task.html"><button class="nav_btn nav_add_task active"
-                            disabled><span><img src="./assets/img/navBar/add_task.svg" alt="">Add
-                                Task</span></button></a>
+                    <a href="./add_task.html"><button class="nav_btn nav_add_task">
+                            <span><img src="./assets/img/navBar/add_task.svg" alt="">AddTask</span>
+                        </button></a>
 
                     <a href="./board.html"><button class="nav_btn nav_board"><span><img
                                     src="./assets/img/navBar/board.svg" alt="">Board</span></button></a>
 
-                    <a href="./contacts.html"><button class="nav_btn nav_contacts"><span><img
+                    <a class="active" href="./contacts.html"><button class="nav_btn nav_contacts active" disabled><span><img
                                     src="./assets/img/navBar/contacts.svg" alt="">Contacts</span></button></a>
 
                 </section>
