--- a/summary.html
+++ b/summary.html
@@ -23,11 +23,11 @@
 
 
                 <section class="navBar">
-                    <a href="./summary.html"><button class="nav_btn nav_summary "><span><img
+                    <a class="active" href="./summary.html"><button class="nav_btn nav_summary active" disabled><span><img
                                     src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
-                    <a class="active" href="./add_task.html"><button class="nav_btn nav_add_task active"
-                            disabled><span><img src="./assets/img/navBar/add_task.svg" alt="">Add
+                    <a href="./add_task.html"><button class="nav_btn nav_add_task"
+                            ><span><img src="./assets/img/navBar/add_task.svg" alt="">Add
                                 Task</span></button></a>
 
                     <a href="./board.html"><button class="nav_btn nav_board"><span><img
@@ -122,7 +122,7 @@
                                 <div class="urgent-tasks">
                                     <img src="./assets/img/Urgent_Arrow.png" alt="">
                                     <span class="font-size-16px">
-                                        <h2 id="urgent">1</h2>Urgent
+                                        <h2 id="urgent"></h2>Urgent
                                     </span>
                                 </div>
                                 <div class="vl-gray"></div>
