--- a/board.html
+++ b/board.html
@@ -43,11 +43,11 @@
                     <a href="./summary.html"><button class="nav_btn nav_summary "><span><img
                                     src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
-                    <a class="active" href="./add_task.html"><button class="nav_btn nav_add_task active"
-                            disabled><span><img src="./assets/img/navBar/add_task.svg" alt="">Add
+                    <a class="active" href="./add_task.html"><button class="nav_btn nav_add_task "
+                            ><span><img src="./assets/img/navBar/add_task.svg" alt="">Add
                                 Task</span></button></a>
 
-                    <a href="./board.html"><button class="nav_btn nav_board"><span><img
+                    <a  class="active" href="./board.html"><button class="nav_btn nav_board active" disabled><span><img
                                     src="./assets/img/navBar/board.svg" alt="">Board</span></button></a>
 
                     <a href="./contacts.html"><button class="nav_btn nav_contacts"><span><img
