--- a/add_task.html
+++ b/add_task.html
@@ -81,7 +81,7 @@
                                 <a href="./hilfe.html" class="menu-item">Help</a>
                                 <a href="./legal_notice.html" class="menu-item">Legal Notice</a>
                                 <a href="./datenschutz.html" class="menu-item">Privacy Policy</a>
-                                <a href="./legal_notice.html" class="menu-item">Log out</a>
+                                <a onclick="logOut(); return false" href="" class="menu-item">Log out</a>
                             </div>
 
                         </section>
@@ -164,7 +164,7 @@
                                         <p style="color: red;">*</p>
                                     </label>
                                     <input id="dueDateInputField" onclick="addRequiredDate(this)"
-                                        oninput="addRequiredDate(this)" class="add-task-input-field" type="date"
+                                        oninput="addRequiredDate(this)" class="add-task-input-field" type="date" lang="de-DE"
                                         style="color: #ccc;">
                                     <div class="required-text">
                                         <span id="requiredDate" class="d-none">This field is required</span>
