--- a/summary.html
+++ b/summary.html
@@ -67,7 +67,7 @@
                                 <a href="./hilfe.html" class="menu-item">Help</a>
                                 <a href="./legal_notice.html" class="menu-item">Legal Notice</a>
                                 <a href="./datenschutz.html" class="menu-item">Privacy Policy</a>
-                                <a href="./legal_notice.html" class="menu-item">Log out</a>
+                                <a onclick="logOut(); return false" href="" class="menu-item">Log out</a>
                             </div>
 
                         </section>
