fixed create task btn on boardhtml

--- a/board.html
+++ b/board.html
@@ -101,8 +101,8 @@
                                 <input class="find-task-input" id="findTaskInput" type="text" placeholder="Find Task">
                                 <button class="search-btn"><img src="./assets/img/search.png" alt=""></button>
                             </form>
-                            <button onclick="renderTaskOverlayContent()" id="addTask" class="add-task">Add Task <img
-                                    src="./assets/img/add.png" alt=""></button>
+                            <button onclick="renderTaskOverlayContent(); validateInputFields()" id="addTask"
+                                class="add-task">Add Task <img src="./assets/img/add.png" alt=""></button>
                         </div>
                     </div>
                 </div>
