--- a/index.html
+++ b/index.html
@@ -57,12 +57,11 @@
                 <a href="./legal_notice.html" class="priv-legal">Legal notice</a>
             </div>
         </div>
-            <div class="p1-logo" id="p1Logo">
-                <img src="./assets/img/logo_join_pos.svg">
-                <!-- <img src="./assets/img/Logo.png" class="logo-resp"> -->
+        <div class="p1-logo" id="p1Logo">
+            <img src="./assets/img/logo_join_pos.svg">
+            <img src="./assets/img/Logo.png" class="logo-resp" style="display: none;">
+        </div>
 
-            </div>
-    
 
     </div>
     <div class="backdrop" id="backdrop"></div>
