--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/login.css">
     <script defer src="./scripts/script.js"></script>
     <script defer src="./scripts/login.js"></script>
-    <title>page 1 with animation and login</title>
+    <title>Join</title>
 </head>
 
 <body onload="loginInit()">
@@ -21,7 +21,7 @@
         </div>
         <div class="login-content">
             <div class="login-h1">
-                <h1>Login</h1>
+                <h1>Log in</h1>
             </div>
             <div class="login-form">
 
