added a responsive back btn to contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -43,8 +43,9 @@
                     <a href="./board.html"><button class="nav_btn nav_board"><span><img
                                     src="./assets/img/navBar/board.svg" alt="">Board</span></button></a>
 
-                    <a class="active" href="./contacts.html"><button class="nav_btn nav_contacts active" disabled><span><img
-                                    src="./assets/img/navBar/contacts.svg" alt="">Contacts</span></button></a>
+                    <a class="active" href="./contacts.html"><button class="nav_btn nav_contacts active"
+                            disabled><span><img src="./assets/img/navBar/contacts.svg"
+                                    alt="">Contacts</span></button></a>
 
                 </section>
             </div>
@@ -105,7 +106,8 @@
                     </div>
 
                     <div class="contacts-content-right">
-
+                        <div onclick="responsiveBackBtn()" class="responsive-back-btn"><img
+                                src="./assets/img/arrow-left-line.png" alt=""></div>
                         <div class="contacts-heading-right">
                             <div class="bigContacts">Contacts</div>
 
