--- a/index.html
+++ b/index.html
@@ -58,8 +58,53 @@
             </div>
         </div>
         <div class="p1-logo" id="p1Logo">
-            <img src="./assets/img/logo_join_pos.svg">
-            <img src="./assets/img/Logo.png" class="logo-resp" style="display: none;">
+
+            <?xml version="1.0" encoding="utf-8"?>
+            <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+            <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+            <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 width="103px" height="123px" viewBox="483.337 478.318 103 123" enable-background="new 483.337 478.318 103 123"
+                 xml:space="preserve">
+            <desc>Created with Fabric.js 5.2.4</desc>
+            <g id="d7dbcda8-841d-4bcb-854a-4245ac71bf91" transform="matrix(1 0 0 1 540 540)">
+                <rect x="-540" y="-540" vector-effect="non-scaling-stroke" display="none" fill="#FFFFFF" width="1080" height="1080"/>
+            </g>
+            <g id="_x37_7b49c8f-e7fc-4da8-b5f1-f05923553a43" transform="matrix(1 0 0 1 540 540)">
+            </g>
+            <g transform="matrix(10.69 0 0 10.69 540 540)">
+                <g>
+                    <g transform="matrix(1 0 0 1 10.09 -48.25)">
+                        <path vector-effect="non-scaling-stroke" fill="#2A3647" d="M-8.53,42.48h-2.09v2.405h2.09V42.48z"/>
+                    </g>
+                    <g transform="matrix(1 0 0 1 -14.66 23.1)">
+                        <path vector-effect="non-scaling-stroke" fill="#2A3647" d="M14.13-24.509h2.09v3.392c0.01,0.816-0.223,1.617-0.667,2.3
+                            c-0.439,0.664-1.286,1.454-2.854,1.454c-1.708,0-2.703-0.808-3.24-1.25l1.318-1.626c0.524,0.428,1.029,0.78,1.93,0.78
+                            c0.682,0,0.954-0.278,1.113-0.52c0.216-0.337,0.328-0.73,0.322-1.131L14.13-24.509z"/>
+                    </g>
+                    <g transform="matrix(1 0 0 1 -23.37 -19.74)">
+                        <path vector-effect="non-scaling-stroke" fill="#29ABE2" d="M21.774,16.813h-2.09v2.1h2.09V16.813z"/>
+                    </g>
+                    <g transform="matrix(1 0 0 1 27.12 50.68)">
+                        <path vector-effect="non-scaling-stroke" fill="#2A3647" d="M-24.465-45.929c0,0.447-0.227,0.688-0.544,0.688
+                            c-0.317,0-0.524-0.286-0.524-0.665c0-0.38,0.214-0.68,0.542-0.68C-24.663-46.587-24.465-46.291-24.465-45.929z M-25.29-45.911
+                            c0,0.27,0.108,0.468,0.293,0.468c0.185,0,0.289-0.21,0.289-0.485c0-0.241-0.096-0.467-0.289-0.467
+                            C-25.19-46.394-25.29-46.176-25.29-45.911z"/>
+                    </g>
+                    <g transform="matrix(1 0 0 1 35.95 50.68)">
+                        <path vector-effect="non-scaling-stroke" fill="#2A3647" d="M-32.88-46.567v1.305h-0.231v-1.305H-32.88z"/>
+                    </g>
+                    <g transform="matrix(1 0 0 1 44.68 50.68)">
+                        <path vector-effect="non-scaling-stroke" fill="#2A3647" d="M-41.359-45.262v-1.305h0.257l0.277,0.538
+                            c0.071,0.141,0.135,0.285,0.19,0.433c-0.014-0.162-0.021-0.347-0.021-0.554v-0.417h0.212v1.305h-0.24l-0.28-0.549
+                            c-0.074-0.144-0.14-0.293-0.198-0.444c0,0.162,0.011,0.344,0.011,0.569v0.423L-41.359-45.262z"/>
+                    </g>
+                </g>
+            </g>
+            </svg>
+            
+
+
+            <!-- <img src="./assets/img/logo_join_pos.svg"> -->
         </div>
 
 
