--- a/contacts.html
+++ b/contacts.html
@@ -131,6 +131,10 @@
         <div id="overlay-container"></div>
         <div class="dark-background" onclick="hideOverlay()"></div>
 
+        <div onclick="showOverlay()" class="add-contact-btn">
+            <img src="./assets/img/contacts_imgs/contact_add.png" alt="">
+        </div>
+
 
         <section class="mobile-nav-section">
 
