responsive btns contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -135,6 +135,10 @@
             <img src="./assets/img/contacts_imgs/contact_add.png" alt="">
         </div>
 
+        <div onclick="openResponsiveEdit()" class="edit-contact-btn-responsive">
+            <img src="./assets/img/threedots.png" alt="">
+        </div>
+
 
         <section class="mobile-nav-section">
 
